[gd_scene load_steps=5 format=3 uid="uid://lfvdcjckt27g"]

[ext_resource type="Script" path="res://resources/scripts/enemy_bullet.gd" id="1_u1oqn"]

[sub_resource type="SphereMesh" id="SphereMesh_lg6tx"]
radius = 0.3
height = 0.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ew70e"]
emission_enabled = true
emission = Color(0, 1, 1, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_obum3"]
radius = 0.276406

[node name="Bullet_Root" type="Node3D"]
transform = Transform3D(0.999927, 0.0120425, 0, -0.0120425, 0.999927, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("1_u1oqn")

[node name="Bullet_Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_lg6tx")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_ew70e")

[node name="Bullet_Lamp" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.113849, 0)
light_color = Color(0, 1, 1, 1)
light_energy = 2.0
light_volumetric_fog_energy = 16.0
omni_range = 0.878
omni_attenuation = 6.77228e-05

[node name="Hurtbox_Area" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="Hurtbox_Shape" type="CollisionShape3D" parent="Hurtbox_Area"]
shape = SubResource("SphereShape3D_obum3")

[connection signal="body_entered" from="Hurtbox_Area" to="." method="_on_hurtbox_area_body_entered"]
